fix: gap and responsive view

--- a/editor-components/faq/faq10/faq10.module.scss
+++ b/editor-components/faq/faq10/faq10.module.scss
@@ -18,7 +18,6 @@
     flex-direction: column;
     gap: var(--composer-gap-lg);
     .header {
-      gap: var(--composer-gap-sm);
       .title, .subtitle, .description {
         content: "";
       }
@@ -128,6 +127,7 @@
           color: var(--composer-font-color-primary);
           transition: opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1);
           text-align: left;
+          margin: var(--composer-gap-sm) 0;
         }
 
         &.open {
